client/assets/styles/scss/deprecated/isolation-ui.scss
//- ************************
//- deprecated file, delete with isolationUI feature flag

.layout-main.deprecated {
  padding: 60px 0 0;
}

.sidebar-containers-deprecated {
  background: $gray-lighterest;
  color: $gray;
  height: 100%;
  overflow: auto;

  .containers {
    overflow-y: auto;
  }

  .spinner-wrapper {
    align-items: center;
    height: 100%;
  }
}

.instance-wrapper.deprecated {
  height: 100%;
}

.accounts-select.deprecated {
  display: flex;
  flex-direction: column;
  margin-top: 0;
  position: absolute;
  right: 9px;
}

// accounts button (specificity to override .btn.purple)
.deprecated .btn-accounts.btn-accounts {
  align-self: flex-end;
  background: transparent;
  border-color: transparent;
  flex: 0 0 auto;
  padding: 0 15px;
  transition: all .15s ease-out;

  @include media(sm) {
    .span {
      display: none;
    }
  }

  &:hover:not([disabled]),
  &:active:not([disabled]),
  &.active {
    background: transparent;
    color: $white;
  }

  .gravatar {
    float: left;
    margin-right: 7px;
    margin-top: 4px;

    @include retina() {
      border: 1px solid currentColor;
    }

    @include media(sm) {
      margin-right: 3px;
    }
  }
}

.containers.deprecated {
  color: $gray;
  flex: 1 1 auto;
  height: 100%;
  overflow-y: auto;
  padding: 12px 0;

  // configure, "hide", and "X more…" buttons
  .btn {
    color: currentColor;
    flex: 0 0 auto;
    font-size: 13px;
    font-style: italic;
    height: 27px;
    line-height: 27px;
    margin-right: 9px;
    opacity: .7;
    padding: 0 6px;
    pointer-events: auto;

    &:hover {
      opacity: .85;
    }

    &:active,
    &.active {
      color: $purple-light;
      opacity: 1;
    }
  }
}

.list-containers.deprecated {
  padding: 9px 0;

  &:not(:last-child) {
    border-bottom: 1px solid $gray-lighter; // lines below categories
  }

  .list-item {
    align-items: center;
    color: currentColor;
    display: flex;
    height: 27px;
    line-height: 27px;

    &:hover .btn-hide {
      display: block;
    }

    // repo name header
    &.small {
      color: $gray-dark;
      pointer-events: none;
    }

    // repo name header or container name
    .span {
      flex: 1 1 auto;
      padding-left: 18px;

      // pseudo-element for hover and active background color
      &::after {
        content: '';
        height: 100%;
        left: 0;
        position: absolute;
        top: 0;
        width: 100%;
        z-index: -1;
      }

      &:hover::after {
        background: rgba($gray-light,.1);
      }

      &:active,
      &.active {
        color: $purple-light;

        &:after {
          background: $purple-lightest;
        }

        + .btn-hide {
          color: $purple-light;
        }
      }

      &.active {
        pointer-events: none;
      }
    }

    // hide button
    .btn-hide {
      display: none;
      line-height: 30px;
    }

    // configure button
    .btn-configure {
      height: 100%;
      margin-right: 6px;
      width: 33px;
    }

    .icons-advanced {
      height: 100%;
      width: 12px;
    }
  }

  // "X more…" button
  > .btn {
    padding: 0 0 0 24px;
  }
}

//- deprecated file, delete with isolationUI feature flag
//- ************************

